--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
+    "i18next": "^23.2.2",
     "react": "18.2.0",
+    "react-i18next": "^13.0.0",
     "react-native": "0.71.8"
   },
   "devDependencies": {
