--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-i18next": "^13.0.0",
     "react-native": "0.71.8",
     "react-native-dotenv": "^3.4.9",
+    "react-native-vector-icons": "^9.2.0",
     "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
