--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,9 +15,9 @@ jobs:
         with:
           fetch-depth: 0
       - name: Install dependencies
-        run: cd paperwork-front-web/ && npm install
+        run: npm install
       - name: Test and coverage
-        run: cd paperwork-front-web/ && npm run test:coverage
+        run: npm run test:coverage
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
