--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,8 @@ web-build/
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+
+# Coverage not needed
+coverage/lcov-report/
+coverage/clover.xml
+coverage/coverage-final.json
