--- a/package.json
+++ b/package.json
@@ -1,30 +1,45 @@
 {
-  "name": "paperwork-mobile",
-  "version": "1.0.0",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "@react-native-picker/picker": "2.4.8",
-    "@react-navigation/native": "^6.1.6",
-    "@react-navigation/native-stack": "^6.9.12",
-    "axios": "^1.4.0",
-    "expo": "~48.0.18",
-    "expo-status-bar": "~1.4.4",
-    "i18next": "^23.2.2",
-    "react": "18.2.0",
-    "react-i18next": "^13.0.0",
-    "react-native": "0.71.8",
-    "react-native-dotenv": "^3.4.9",
-    "react-native-vector-icons": "^9.2.0",
-    "universal-cookie": "^4.0.4",
-    "expo-splash-screen": "~0.18.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0"
-  },
-  "private": true
+    "name": "paperwork-mobile",
+    "version": "1.0.0",
+    "scripts": {
+        "start": "expo start",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "web": "expo start --web",
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "test:coverage": "jest --coverage"
+    },
+    "dependencies": {
+        "@babel/preset-env": "^7.22.5",
+        "@react-native-picker/picker": "2.4.8",
+        "@react-navigation/native": "^6.1.6",
+        "@react-navigation/native-stack": "^6.9.12",
+        "axios": "^1.4.0",
+        "expo": "~48.0.18",
+        "expo-splash-screen": "~0.18.2",
+        "expo-status-bar": "~1.4.4",
+        "i18next": "^23.2.2",
+        "react": "18.2.0",
+        "react-i18next": "^13.0.0",
+        "react-native": "0.71.8",
+        "react-native-dotenv": "^3.4.9",
+        "react-native-vector-icons": "^9.2.0",
+        "universal-cookie": "^4.0.4"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.20.0",
+        "@testing-library/jest-native": "^5.4.2",
+        "@types/react-test-renderer": "^18.0.0",
+        "babel-jest": "^29.5.0",
+        "jest": "^29.5.0",
+        "react-test-renderer": "^18.2.0"
+    },
+    "jest": {
+        "preset": "react-native",
+        "transformIgnorePatterns": [
+            "node_modules/(?!(@react-native|react-native|react-native-vector-icons|expo|expo-splash-screen|expo-status-bar|expo-font|expo-asset)/)"           
+        ]
+    },
+    "private": true
 }
