--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
         "ios": "expo start --ios",
         "web": "expo start --web",
         "test": "jest",
-        "test:watch": "jest --watch",
-        "test:coverage": "jest --coverage"
+        "test:watch": "jest --watchAll",
+        "test:coverage": "jest --silent --coverage=true",
+        "test:coverage:log": "jest --coverage=true",
+        "test:all": "jest --watchAll --coverage=true"
     },
     "dependencies": {
         "@babel/preset-env": "^7.22.5",
@@ -30,15 +32,14 @@
     "devDependencies": {
         "@babel/core": "^7.20.0",
         "@testing-library/jest-native": "^5.4.2",
-        "@types/react-test-renderer": "^18.0.0",
+        "@testing-library/react-native": "^12.1.2",
         "babel-jest": "^29.5.0",
-        "jest": "^29.5.0",
-        "react-test-renderer": "^18.2.0"
+        "jest": "^29.5.0"
     },
     "jest": {
         "preset": "react-native",
         "transformIgnorePatterns": [
-            "node_modules/(?!(@react-native|react-native|react-native-vector-icons|expo|expo-splash-screen|expo-status-bar|expo-font|expo-asset)/)"           
+            "node_modules/(?!(@react-native|react-native|react-native-vector-icons|expo|expo-splash-screen|expo-status-bar|expo-font|expo-asset)/)"
         ]
     },
     "private": true
