--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
         "start": "expo start",
         "android": "expo start --android",
         "ios": "expo start --ios",
+        "configure": "eas build:configure",
+        "build:android": "eas build --platform android",
+        "build:ios": "eas build --platform ios",
         "web": "expo start --web",
         "test": "jest",
         "test:watch": "jest --watchAll",
@@ -14,6 +17,7 @@
     },
     "dependencies": {
         "@babel/preset-env": "^7.22.5",
+        "@react-native-community/masked-view": "^0.1.11",
         "@react-native-picker/picker": "2.4.8",
         "@react-navigation/native": "^6.1.6",
         "@react-navigation/native-stack": "^6.9.12",
@@ -26,6 +30,11 @@
         "react-i18next": "^13.0.0",
         "react-native": "0.71.8",
         "react-native-dotenv": "^3.4.9",
+        "react-native-gesture-handler": "^2.12.0",
+        "react-native-reanimated": "^3.3.0",
+        "react-native-safe-area-context": "^4.6.3",
+        "react-native-safe-area-view": "^1.1.1",
+        "react-native-screens": "^3.22.0",
         "react-native-vector-icons": "^9.2.0",
         "universal-cookie": "^4.0.4"
     },
