--- a/package.json
+++ b/package.json
@@ -1,55 +1,58 @@
 {
-    "name": "paperwork-mobile",
-    "version": "1.0.0",
-    "scripts": {
-        "start": "expo start",
-        "android": "expo start --android",
-        "ios": "expo start --ios",
-        "configure": "eas build:configure",
-        "build:android": "eas build --platform android",
-        "build:ios": "eas build --platform ios",
-        "web": "expo start --web",
-        "test": "jest",
-        "test:watch": "jest --watchAll",
-        "test:coverage": "jest --silent --coverage=true",
-        "test:coverage:log": "jest --coverage=true",
-        "test:all": "jest --watchAll --coverage=true"
-    },
-    "dependencies": {
-        "@babel/preset-env": "^7.22.5",
-        "@react-native-community/masked-view": "^0.1.11",
-        "@react-native-picker/picker": "2.4.8",
-        "@react-navigation/native": "^6.1.6",
-        "@react-navigation/native-stack": "^6.9.12",
-        "axios": "^1.4.0",
-        "expo": "~48.0.18",
-        "expo-splash-screen": "~0.18.2",
-        "expo-status-bar": "~1.4.4",
-        "i18next": "^23.2.2",
-        "react": "18.2.0",
-        "react-i18next": "^13.0.0",
-        "react-native": "0.71.8",
-        "react-native-dotenv": "^3.4.9",
-        "react-native-gesture-handler": "^2.12.0",
-        "react-native-reanimated": "^3.3.0",
-        "react-native-safe-area-context": "^4.6.3",
-        "react-native-safe-area-view": "^1.1.1",
-        "react-native-screens": "^3.22.0",
-        "react-native-vector-icons": "^9.2.0",
-        "universal-cookie": "^4.0.4"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.20.0",
-        "@testing-library/jest-native": "^5.4.2",
-        "@testing-library/react-native": "^12.1.2",
-        "babel-jest": "^29.5.0",
-        "jest": "^29.5.0"
-    },
-    "jest": {
-        "preset": "react-native",
-        "transformIgnorePatterns": [
-            "node_modules/(?!(@react-native|react-native|react-native-vector-icons|expo|expo-splash-screen|expo-status-bar|expo-font|expo-asset)/)"
-        ]
-    },
-    "private": true
+  "name": "paperwork-mobile",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "expo start --tunnel",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "configure": "eas build:configure",
+    "build:android": "eas build --platform android",
+    "build:ios": "eas build --platform ios",
+    "web": "expo start --web",
+    "test": "jest",
+    "test:watch": "jest --watchAll",
+    "test:coverage": "jest --silent --coverage=true",
+    "test:coverage:log": "jest --coverage=true",
+    "test:all": "jest --watchAll --coverage=true"
+  },
+  "dependencies": {
+    "@babel/preset-env": "^7.22.5",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "2.4.8",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "axios": "^1.4.0",
+    "expo": "~48.0.18",
+    "expo-splash-screen": "~0.18.2",
+    "expo-status-bar": "~1.4.4",
+    "i18next": "^23.2.2",
+    "react": "18.2.0",
+    "react-i18next": "^13.0.0",
+    "react-native": "0.71.8",
+    "react-native-dotenv": "^3.4.9",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-safe-area-view": "^1.1.1",
+    "react-native-screens": "~3.20.0",
+    "react-native-vector-icons": "^9.2.0",
+    "universal-cookie": "^4.0.4",
+    "react-native-web": "~0.18.10",
+    "react-dom": "18.2.0",
+    "@expo/webpack-config": "^18.0.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0",
+    "@testing-library/jest-native": "^5.4.2",
+    "@testing-library/react-native": "^12.1.2",
+    "babel-jest": "^29.5.0",
+    "jest": "^29.5.0"
+  },
+  "jest": {
+    "preset": "react-native",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(@react-native|react-native|react-native-vector-icons|expo|expo-splash-screen|expo-status-bar|expo-font|expo-asset)/)"
+    ]
+  },
+  "private": true
 }
