--- a/package.json
+++ b/package.json
@@ -39,14 +39,23 @@
     "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
-    "universal-cookie": "^4.0.4"
+    "react-native-webview": "11.26.0",
+    "universal-cookie": "^4.0.4",
+    "@types/react": "~18.0.27",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@testing-library/jest-native": "^5.4.2",
     "@testing-library/react-native": "^12.1.2",
+    "@tsconfig/react-native": "^3.0.2",
+    "@types/jest": "^29.5.3",
+    "@types/react": "~18.0.27",
+    "@types/react-native-dotenv": "^0.2.0",
+    "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.5.0",
-    "jest": "^29.5.0"
+    "jest": "^29.5.0",
+    "typescript": "^4.9.4"
   },
   "jest": {
     "preset": "react-native",
