--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "2.4.8",
+    "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@types/react": "~18.0.27",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
     "expo-splash-screen": "~0.18.2",
@@ -37,11 +39,8 @@
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-screens": "~3.20.0",
-    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10",
     "react-native-webview": "11.26.0",
-    "universal-cookie": "^4.0.4",
-    "@types/react": "~18.0.27",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
@@ -52,9 +51,12 @@
     "@types/jest": "^29.5.3",
     "@types/react": "~18.0.27",
     "@types/react-native-dotenv": "^0.2.0",
+    "@types/react-native-vector-icons": "^6.4.14",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.5.0",
+    "babel-plugin-module-resolver": "^5.0.0",
     "jest": "^29.5.0",
+    "react-native-vector-icons": "^10.0.0",
     "typescript": "^4.9.4"
   },
   "jest": {
