--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "18.2.0",
     "react-i18next": "^13.0.0",
     "react-native": "0.71.8",
+    "react-native-app-auth": "^6.4.3",
     "react-native-calendars": "^1.1299.0",
     "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "~2.9.0",
