--- a/eas.json
+++ b/eas.json
@@ -1,23 +1,27 @@
 {
-  "cli": {
-    "version": ">= 3.14.0"
-  },
-  "build": {
-    "development": {
-      "distribution": "internal",
-      "android": {
-        "gradleCommand": ":app:assembleDebug"
-      },
-      "ios": {
-        "buildConfiguration": "Debug"
-      }
+    "cli": {
+        "version": ">= 3.14.0"
     },
-    "preview": {
-      "distribution": "internal"
+    "build": {
+        "development": {
+            "distribution": "internal",
+            "android": {
+                "gradleCommand": ":app:assembleDebug"
+            },
+            "ios": {
+                "buildConfiguration": "Debug"
+            }
+        },
+        "preview": {
+            "distribution": "internal"
+        },
+        "production": {
+            "android": {
+                "buildType": "apk"
+            }
+        }
     },
-    "production": {}
-  },
-  "submit": {
-    "production": {}
-  }
+    "submit": {
+        "production": {}
+    }
 }
