--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "paperwork-mobile",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start --tunnel",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "configure": "eas build:configure",
     "build:android": "eas build --platform android",
     "build:ios": "eas build --platform ios",
