--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -120,6 +120,9 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0.0"
+        manifestPlaceholders = [
+            'appAuthRedirectScheme': 'com.anonymous.paperworkmobile'
+        ]
     }
 
     splits {
