--- a/eas.json
+++ b/eas.json
@@ -3,26 +3,20 @@
         "version": ">= 3.14.0"
     },
     "build": {
-        "development": {
-            "distribution": "internal",
-            "android": {
-                "gradleCommand": ":app:assembleDebug"
-            },
-            "ios": {
-                "buildConfiguration": "Debug"
-            }
-        },
         "preview": {
-            "distribution": "internal"
-        },
-        "production": {
-            "env": {
-                "REACT_APP_BASE_URL": "http://54.86.209.237:8080"
-            },
             "android": {
                 "buildType": "apk"
             }
-        }
+        },
+        "preview2": {
+            "android": {
+                "gradleCommand": ":app:assembleRelease"
+            }
+        },
+        "preview3": {
+            "developmentClient": true
+        },
+        "production": {}
     },
     "submit": {
         "production": {}
