--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "paperwork-mobile",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start --dev-client",
+    "start": "expo start --tunnel",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "configure": "eas build:configure",
@@ -39,6 +39,7 @@
     "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.10",
     "typescript": "^4.9.4"
