--- a/package.json
+++ b/package.json
@@ -36,13 +36,15 @@
     "react-native": "0.71.8",
     "react-native-app-auth": "^6.4.3",
     "react-native-calendars": "^1.1299.0",
-    "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.10",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "expo-auth-session": "~4.0.3",
+    "expo-random": "~13.1.1",
+    "expo-web-browser": "~12.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -51,7 +53,6 @@
     "@tsconfig/react-native": "^3.0.2",
     "@types/jest": "^29.5.3",
     "@types/react": "~18.0.27",
-    "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-vector-icons": "^6.4.14",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.5.0",
