--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native": "0.71.8",
     "react-native-app-auth": "^6.4.3",
     "react-native-calendars": "^1.1299.0",
+    "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.7.2",
@@ -53,6 +54,7 @@
     "@tsconfig/react-native": "^3.0.2",
     "@types/jest": "^29.5.3",
     "@types/react": "~18.0.27",
+    "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-vector-icons": "^6.4.14",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.5.0",
