--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_BASE_URL = "http://54.86.209.237:8080"
+EXPO_PUBLIC_BASE_URL = "http://54.86.209.237:8080"
+EXPO_PUBLIC_APP_ID = "969915637497521"
