--- a/app.json
+++ b/app.json
@@ -7,6 +7,8 @@
       "**/*"
     ],
     "extra": {
+      "baseUrl": "http://54.86.209.237:8080",
+      "appId": "969915637497521",
       "eas": {
         "projectId": "96e73a0e-eb8e-4164-8743-66af30f0105a"
       }
