--- a/eas.json
+++ b/eas.json
@@ -3,6 +3,10 @@
     "version": ">= 4.1.2"
   },
   "build": {
+    "development": {
+      "developmentClient": true,
+      "distribution": "internal"
+    },
     "preview": {
       "android": {
         "buildType": "apk"
@@ -16,7 +20,8 @@
     "preview3": {
       "developmentClient": true
     },
-    "production": {}
+    "production": {
+    }
   },
   "submit": {
     "production": {}
