--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-google-signin/google-signin": "^10.0.1",
     "@react-native-picker/picker": "^2.5.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
@@ -33,6 +34,7 @@
     "react-native-app-auth": "^6.4.3",
     "react-native-calendars": "^1.1301.0",
     "react-native-dotenv": "^3.4.9",
+    "react-native-fbsdk-next": "^12.1.0",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.2",
