--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
+    "build:android": "eas build --profile development --platform android",
     "test": "jest",
     "test:watch": "jest --watchAll",
     "test:coverage": "jest --silent --coverage=true",
@@ -17,24 +18,26 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-google-signin/google-signin": "^10.0.1",
     "@react-native-picker/picker": "^2.5.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "axios": "^1.5.0",
     "expo": "~49.0.8",
+    "expo-auth-session": "~5.0.2",
+    "expo-crypto": "~12.4.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
-    "expo-web-browser": "^12.3.2",
+    "expo-web-browser": "~12.3.2",
     "i18next": "^23.4.6",
+    "jest": "^29.2.1",
+    "jest-expo": "^49.0.0",
     "react": "18.2.0",
     "react-i18next": "^13.2.2",
     "react-native": "0.72.4",
     "react-native-app-auth": "^6.4.3",
     "react-native-calendars": "^1.1301.0",
     "react-native-dotenv": "^3.4.9",
-    "react-native-fbsdk-next": "^12.1.0",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.2",
@@ -42,12 +45,20 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^12.3.0",
     "@tsconfig/react-native": "^3.0.2",
     "@types/jest": "^29.5.4",
     "@types/react": "^18.2.21",
     "@types/react-test-renderer": "^18.0.1",
     "jest": "^29.6.4",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ]
   },
   "private": true
 }
