--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "expo-web-browser": "~12.3.2",
     "i18next": "^23.4.6",
     "jest": "^29.2.1",
-    "jest-expo": "^49.0.0",
     "react": "18.2.0",
     "react-i18next": "^13.2.2",
     "react-native": "0.72.4",
@@ -55,7 +54,7 @@
     "typescript": "^5.2.2"
   },
   "jest": {
-    "preset": "jest-expo",
+    "preset": "react-native",
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
     ]
