--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "expo-status-bar": "~1.6.0",
     "expo-web-browser": "~12.3.2",
     "i18next": "^23.4.6",
-    "jest": "^29.2.1",
     "react": "18.2.0",
     "react-i18next": "^13.2.2",
     "react-native": "0.72.4",
@@ -49,6 +48,7 @@
     "@types/jest": "^29.5.4",
     "@types/react": "^18.2.21",
     "@types/react-test-renderer": "^18.0.1",
+    "install": "^0.13.0",
     "jest": "^29.6.4",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
