--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "react-native-app-auth": "^6.4.3",
     "react-native-calendars": "^1.1301.0",
     "react-native-dotenv": "^3.4.9",
+    "react-native-fbsdk-next": "^12.1.0",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.2",
-    "react-native-screens": "^3.25.0"
+    "react-native-screens": "^3.25.0",
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -47,6 +49,7 @@
     "@tsconfig/react-native": "^3.0.2",
     "@types/jest": "^29.5.4",
     "@types/react": "^18.2.21",
+    "@types/react-native-vector-icons": "^6.4.14",
     "@types/react-test-renderer": "^18.0.1",
     "install": "^0.13.0",
     "jest": "^29.6.4",
