--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "expo-status-bar": "~1.6.0",
     "expo-web-browser": "~12.3.2",
     "i18next": "^23.4.6",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-i18next": "^13.2.2",
     "react-native": "0.72.4",
     "react-native-app-auth": "^6.4.3",
     "react-native-calendars": "^1.1301.0",
+    "react-native-date-picker": "^4.3.3",
     "react-native-dotenv": "^3.4.9",
     "react-native-fbsdk-next": "^12.1.0",
     "react-native-gesture-handler": "^2.12.1",
