--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "expo-status-bar": "~1.6.0",
     "expo-web-browser": "~12.3.2",
     "i18next": "^23.4.6",
+    "jest": "^29.2.1",
+    "jest-expo": "^49.0.0",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-i18next": "^13.2.2",
@@ -44,7 +46,8 @@
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-vector-icons": "^10.0.0",
+    "expo-constants": "~14.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -60,7 +63,10 @@
     "typescript": "^5.2.2"
   },
   "jest": {
-    "preset": "react-native",
+    "preset": "jest-expo",
+    "setupFiles": [
+      "./tests/jest.setup.ts"
+    ],
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
     ]
