--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.5.0",
     "expo": "~49.0.8",
     "expo-auth-session": "~5.0.2",
+    "expo-constants": "~14.4.2",
     "expo-crypto": "~12.4.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
@@ -46,8 +47,8 @@
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
-    "react-native-vector-icons": "^10.0.0",
-    "expo-constants": "~14.4.2"
+    "react-native-select-dropdown": "^3.4.0",
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
