[FIX] blank screen

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "paperwork-mobile",
-    "slug": "paperwork-mobile",
+    "name": "Paperwork",
+    "slug": "Paperwork",
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
