--- a/eas.json
+++ b/eas.json
@@ -7,6 +7,10 @@
       "developmentClient": true,
       "distribution": "internal"
     },
+    "production": {
+      "developmentClient": false,
+      "distribution": "internal"
+    },
     "preview": {
       "android": {
         "buildType": "apk"
@@ -19,8 +23,6 @@
     },
     "preview3": {
       "developmentClient": true
-    },
-    "production": {
     }
   },
   "submit": {
