--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "build:android": "eas build --profile development --platform android",
+    "build:android": "eas build --profile production --platform android",
+    "build:development:android": "eas build --profile development --platform android",
+    "build:preview:android": "eas build --profile preview --platform android",
     "test": "jest",
     "test:watch": "jest --watchAll",
     "test:coverage": "jest --silent --coverage=true",
