--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "build:android": "eas build --profile production --platform android",
+    "build:android": "eas build --profile apk --platform android",
     "build:development:android": "eas build --profile development --platform android",
-    "build:preview:android": "eas build --profile preview --platform android",
     "test": "jest",
     "test:watch": "jest --watchAll",
     "test:coverage": "jest --silent --coverage=true",
@@ -18,11 +17,11 @@
     "test:all": "jest --watchAll --coverage=true"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/checkbox": "^0.5.16",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-google-signin/google-signin": "^10.0.1",
-    "@react-native-picker/picker": "^2.5.0",
+    "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -40,17 +39,18 @@
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-i18next": "^13.2.2",
-    "react-native": "0.72.4",
+    "react-native": "0.72.6",
     "react-native-app-auth": "^6.4.3",
     "react-native-calendars": "^1.1301.0",
     "react-native-date-picker": "^4.3.3",
     "react-native-dotenv": "^3.4.9",
-    "react-native-gesture-handler": "^2.12.1",
-    "react-native-reanimated": "^3.4.2",
-    "react-native-safe-area-context": "^4.7.2",
-    "react-native-screens": "^3.25.0",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-select-dropdown": "^3.4.0",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-vector-icons": "^10.0.0",
+    "expo-updates": "~0.18.17"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
