--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "build:android": "eas build --profile apk --platform android",
+    "build:production:android": "eas build --profile production --platform android",
     "build:development:android": "eas build --profile development --platform android",
     "test": "jest",
     "test:watch": "jest --watchAll",
