[FIX] minor fix + clean code

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -54,3 +54,7 @@ expo.webp.animated=false
 
 # Enable network inspector
 EX_DEV_CLIENT_NETWORK_INSPECTOR=true
+MYAPP_UPLOAD_STORE_FILE=paperwork.keystore
+MYAPP_UPLOAD_KEY_ALIAS=paperwork-release
+MYAPP_UPLOAD_STORE_PASSWORD=paperwork2024!
+MYAPP_UPLOAD_KEY_PASSWORD=paperwork2024!
